Fis layout issues

--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,6 @@ h1, h2 {
 
 main {
     background-color: var(--very-light-gray);
-    width: 17em;
 }
 
 main div {
